# audio-device

./: .gitignore  Cargo.toml  README.md
.github/workflows/: quality.yml  tests.yml
examples/: basic.rs  feedback.rs  list.rs  list_devices.rs  playback_sine.rs  sine.rs
examples/web/: Cargo.toml  build.sh  index.html
examples/web/src/: lib.rs
src/: backend_cpal.rs  backend_juce.rs  backend_rtaudio.rs  compile_error.rs  device_cpal.rs  device_juce.rs  device_rtaudio.rs  lib.rs  web_audio.rs
