[package]
name = "audio-device"
version = "0.1.0"
edition = "2024"

[dependencies]
audio-blocks = "0.5.0"
rtrb = "0.3.2"
thiserror = "2.0.17"

cpal = { version = "0.16.0", optional = true }
cxx-juce = { version = "0.8.0", optional = true }
rtaudio = { version = "0.3.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# Web dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "AudioDestinationNode",
    "AudioNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioProcessingEvent",
    "ScriptProcessorNode",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamAudioSourceNode",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "Navigator",
    "Window",
]

[features]
default = ["juce"]
cpal = ["dep:cpal"]
juce = ["dep:cxx-juce"]
rtaudio = ["dep:rtaudio"]
web = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:js-sys"]
serde = ["dep:serde"]
