[package]
name = "web-audio-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
audio-device = { path = "../..", default-features = false, features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Document", "Element", "HtmlElement", "HtmlButtonElement", "HtmlSelectElement", "HtmlOptionElement", "Window", "Node"] }
console_error_panic_hook = "0.1"
